--- a/fastapi_app/requirements.txt
+++ b/fastapi_app/requirements.txt
@@ -7,4 +7,5 @@ langchain-google-genai==0.0.5
 google-generativeai==0.3.2
 pydantic-settings==2.1.0
 chromadb==0.4.22
-sentence-transformers==2.2.2 
+sentence-transformers==4.1.0
+huggingface_hub==0.31.1
