--- a/fastapi_app/Dockerfile
+++ b/fastapi_app/Dockerfile
@@ -1,5 +1,5 @@
 # Python 3.10 slim 이미지를 베이스로 사용
-FROM python:3.10
+FROM python:3.10-slim
 
 # 시스템 패키지 설치
 RUN apt-get update && apt-get install -y build-essential libsqlite3-dev && rm -rf /var/lib/apt/lists/*
