Deploy: 로그 수집을 위한 jenkinsfile volume 할당
 #129

--- a/fastapi_app/Jenkinsfile
+++ b/fastapi_app/Jenkinsfile
@@ -137,6 +137,7 @@ docker pull ${env.GAR_IMAGE}
 
 sudo docker run -d --name ${env.CONTAINER_NAME} \\
   --env-file /home/${env.SSH_USER}/.env \\
+  -v /home/${env.SSH_USER}/logs:/logs \
   -p ${env.PORT}:${env.PORT} \\
   ${env.GAR_IMAGE}
 """
