feat : 장소 데이터 업데이트 기능 개발
- ChromaDB GCS 이전
- 빌드 시 GCS에서 DB 다운로드를 위한 jenkins 파일 수정
- ChromaDB 데이터 add 코드 작성
- S3 boto3 requirements 추가
- S3 접근 권한 허용
- 크롤링 썸네일 이미지 임시 저장 경로 설정
- RDB데이터, 썸네일 이미지 S3 업로드
- 전체 기능 파이프라인화
- api 경로 추가
- 데이터 업로더 의존성 주입
- 요청 바디 스키마 작성
- api 유효성 검증을 위한 내부 secret key 설정
 #199

--- a/fastapi_app/Jenkinsfile
+++ b/fastapi_app/Jenkinsfile
@@ -101,6 +101,30 @@ pipeline {
             }
         }
 
+        stage('Download ChromaDB from GCS') {
+            steps {
+                dir('fastapi_app') {
+                    script {
+                        withCredentials([
+                            file(credentialsId: 'gcp-sa-key', variable: 'GCP_KEY_FILE')
+                        ]) {
+                            sh """
+                            gcloud auth activate-service-account --key-file=${GCP_KEY_FILE}
+                            gcloud config set project ${env.PROJECT_ID}
+
+                            cd app/data
+                            gsutil cp gs://static-backup-bucket/vector_store/chroma_db_keyword.zip .
+
+                            unzip -o chroma_db_keyword.zip -d .
+                            rm chroma_db_keyword.zip
+                            """
+                        }
+                    }
+                }
+            }
+        }
+
+
         stage('GAR 인증') {
             steps {
                 sh "gcloud auth configure-docker ${env.GAR_HOST} --quiet"
