fix : 리눅스 환경 chromedriver 설정 추가
- Dockerfile chromadriver 설정 추가
- crawler driver 설정 추가
 #207

--- a/fastapi_app/Dockerfile
+++ b/fastapi_app/Dockerfile
@@ -4,6 +4,27 @@ FROM python:3.10-slim
 # 시스템 패키지 설치
 RUN apt-get update && apt-get install -y build-essential libsqlite3-dev && rm -rf /var/lib/apt/lists/*
 
+# Chrome 및 의존성 설치
+RUN apt-get update && apt-get install -y \
+    wget curl unzip gnupg build-essential libsqlite3-dev \
+    libglib2.0-0 libnss3 libgconf-2-4 libxss1 libappindicator3-1 \
+    libasound2 libatk-bridge2.0-0 libgtk-3-0 libgbm1 xdg-utils \
+    && rm -rf /var/lib/apt/lists/*
+
+# Chrome 설치
+RUN wget https://storage.googleapis.com/chrome-for-testing-public/138.0.7204.94/linux64/chrome-linux64.zip && \
+    unzip chrome-linux64.zip && \
+    mv chrome-linux64 /opt/chrome && \
+    ln -s /opt/chrome/chrome /usr/bin/google-chrome && \
+    rm chrome-linux64.zip
+
+# Chromedriver 설치
+RUN wget https://storage.googleapis.com/chrome-for-testing-public/138.0.7204.94/linux64/chromedriver-linux64.zip && \
+    unzip chromedriver-linux64.zip && \
+    mv chromedriver-linux64/chromedriver /usr/bin/chromedriver && \
+    chmod +x /usr/bin/chromedriver && \
+    rm chromedriver-linux64.zip
+
 # 컨테이너 내 작업 디렉토리 설정
 WORKDIR /app
 
