--- a/fastapi_app/requirements.txt
+++ b/fastapi_app/requirements.txt
@@ -9,6 +9,8 @@ pydantic-settings==2.1.0
 chromadb==0.4.22
 transformers==4.52.4
 huggingface_hub==0.31.1
+peft==0.16.0
+torch==2.7.1
 pysqlite3-binary==0.5.4
 pandas==2.2.3
 prometheus_client
